--- a/.github/ci-cd.yml
+++ b/.github/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD - Deploy to Cloud Run
 
 on:
   push:
@@ -6,18 +6,24 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout del código
         uses: actions/checkout@v3
 
-      - name: Login to DockerHub
+      - name: Autenticación en DockerHub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
-        run: docker build -t bryandj84/miapp .
+      - name: Construcción de la imagen Docker
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest .
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest ${{ secrets.DOCKERHUB_USERNAME }}/miapp:${{ github.sha }}
 
-      - name: Push Docker image
-        run: docker push bryandj84/miapp
+      - name: Subir imagen a DockerHub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:${{ github.sha }}
+
+      
