--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Deploy to Cloud Run
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,24 +6,39 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout del código
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Autenticación en DockerHub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Construcción de la imagen Docker
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest .
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest ${{ secrets.DOCKERHUB_USERNAME }}/miapp:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mi-aplicacion .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/mi-aplicacion
 
-      - name: Subir imagen a DockerHub
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:${{ github.sha }}
-
-      
+      # - name: Deploy to Google Cloud Run
+      #   run: |
+      #     gcloud run deploy mi-aplicacion \
+      #       --image gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/mi-aplicacion \
+      #       --platform managed \
+      #       --region southamerica-east1 \
+      #       --allow-unauthenticated
