--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,8 +32,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$(date +%s) .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$(date +%s)
+          IMAGE_TAG=$(date +%Y%m%d-%H%M%S)
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$IMAGE_TAG .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$IMAGE_TAG
 
       # - name: Deploy to Google Cloud Run
       #   run: |
