--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,9 +32,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_TAG=$(date +%Y%m%d-%H%M%S)
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$IMAGE_TAG .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:$IMAGE_TAG
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/newapp:v2 .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:v2
 
       # - name: Deploy to Google Cloud Run
       #   run: |
