--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,17 +36,17 @@ jobs:
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/newapp:v2
 
       - name: Authenticate to Google Cloud
-        run: |
-           uses: google-github-actions/auth@v1
-           with:
+        uses: google-github-actions/auth@v1
+        with:
            credentials_json: ${{ secrets.GCP_SA_KEY }}
         
-      
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
       
       - name: Deploy to Google Cloud Run
         run: |
           gcloud run deploy hola-mundo \
-            --image gcr.io/${{ secrets.GCLOUD_PROJECT_ID }}/newapp:v2 \
+            --image gcr.io/${{ secrets.DOCKERHUB_USERNAME }}/newapp:v2 \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }} \
