--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,8 @@ jobs:
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }} \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --set-env-vars APP_VERSION=1.0.0
 
 
       
