--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,5 +53,8 @@ jobs:
             --allow-unauthenticated \
             --set-env-vars APP_VERSION=1.0.0
 
+      - name: Show url
+        run: |
+          SERVICES_URL=$(gcloud run services describe hola-mundo --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --format 'value(status.url)')
 
       
