--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,12 +45,8 @@ jobs:
       
       - name: Deploy to Google Cloud Run
         run: |
-          gcloud run deploy hola-mundo  --image docker.io/${{ secrets.DOCKERHUB_USERNAME }}/newapp:v3 --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --set-env-vars APP_VERSION=1.0.0
+          gcloud run deploy hola-mundo  --image docker.io/${{ secrets.DOCKERHUB_USERNAME }}/newapp:v3 --platform managed --region ${{ secrets.GCP_REGION }} --set-env-vars APP_VERSION=1.0.0 --allow-unauthenticated
 
-      - name: Authenticate to Google Cloud
-        run: |
-          gcloud run services update-traffic hola-mundo --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --allow-unauthenticated --to-latest
-      
       - name: Show url
         run: |
           SERVICES_URL=$(gcloud run services describe hola-mundo --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --format 'value(status.url)')
