--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,13 +45,10 @@ jobs:
       
       - name: Deploy to Google Cloud Run
         run: |
-          gcloud run deploy hola-mundo  --image docker.io/${{ secrets.DOCKERHUB_USERNAME }}/newapp:v2 --platform managed --region ${{ secrets.GCP_REGION }} --set-env-vars APP_VERSION=1.0.0 --member="allUsers"  --role="roles/run.invoker" --allow-unauthenticated
+          gcloud run deploy hola-mundo  --image docker.io/${{ secrets.DOCKERHUB_USERNAME }}/newapp:v3 --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --set-env-vars APP_VERSION=1.0.0 --allow-unauthenticated
 
       - name: Show url
         run: |
           SERVICES_URL=$(gcloud run services describe hola-mundo --platform managed --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }} --format 'value(status.url)')
           echo "The URL is $SERVICES_URL"
-
-
-
       
